# torrent-client

./: CMakeLists.txt  SharedQueue.h  bencode.cpp  bencode.h  bittorrentmessage.cpp  bittorrentmessage.h  connect.cpp  connect.h  log.cpp  log.h  loger.cpp  loger.h  logo_rb.icns  main.cpp  peerconnection.cpp  peerconnection.h  peerretriever.cpp  peerretriever.h  piece.cpp  piece.h  piecemanager.cpp  piecemanager.h  resources.qrc  sha1.cpp  sha1.h  tester.cpp  tester.h  torrentclient.cpp  torrentclient.h  torrentclientui.cpp  torrentclientui.h  torrentfile.cpp  torrentfile.h  torrentfileparser.cpp  torrentfileparser.h  utils.cpp  utils.h  widget.cpp  widget.h
